--- a/Frontend/Styles/aboutPage.css
+++ b/Frontend/Styles/aboutPage.css
@@ -24,6 +24,9 @@ h2 {
 .team {
     display: flex;
     justify-content: center;
+    align-items: center;
+    align-content: center;
+
     flex-wrap: wrap;
     gap: 20px;
 }
