--- a/Frontend/Styles/styles.css
+++ b/Frontend/Styles/styles.css
@@ -3,7 +3,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #f0f2f5;
+    background-color: #e9ebea;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
