Last 5 houses are added, index.php redirects to mainPage.php

--- a/Frontend/Styles/mainPage.css
+++ b/Frontend/Styles/mainPage.css
@@ -1,5 +1,17 @@
 .content {
     flex: 1;  /* İçerik esnek olur ve kalan boş alanı doldurur */
     padding: 20px;
-    background-color: #f5f5f5;
+    background-color: #e9ebea;
+}
+
+.content .house-cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.content .last-houses-text{
+    font-size: 24px;
+    font-weight: bold;
 }
