Refactor houseCard.css and mainPage.css

--- a/Frontend/Styles/mainPage.css
+++ b/Frontend/Styles/mainPage.css
@@ -1,14 +1,22 @@
 .content {
     flex: 1;  /* İçerik esnek olur ve kalan boş alanı doldurur */
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
     background-color: #e9ebea;
+    padding: 20px;
 }
 
-.content .house-cards{
+.content .house-cards {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center; /* Kartları sola hizalar */
     gap: 20px;
+    overflow-x: auto; /* Sadece house-cards için kaydırma ekler */
+    padding: 20px;
+    width: 100%; /* Kartlar tam genişlikte görünür */
+    max-width: 100%; /* Ekran genişliğini aşmaz */
+    box-sizing: border-box; /* Padding ile genişliği aşmayı engeller */
 }
 
 .content .last-houses-text{
