--- a/Frontend/Styles/houseCard.css
+++ b/Frontend/Styles/houseCard.css
@@ -1,9 +1,10 @@
 .home-card {
     border: 1px solid #ccc;
     border-radius: 20px;
-    margin: 10px;
-    width: 300px; /* Adjust width as needed */
-    height: 400px;
+    min-width: 300px; /* Adjust width as needed */
+    min-height: 400px;
+    max-width: 300px;
+    max-height: 400px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s; /* For hover effect */
     background-color: #fff; /* White background for contrast */
