--- a/Frontend/Styles/searchResults.css
+++ b/Frontend/Styles/searchResults.css
@@ -15,13 +15,14 @@
 }
 
 /* Make each card take 20% of the row */
+/*
 .SearchContent > .home-card {
     flex: 1 1 20%; 
     max-width: 20%; 
     box-sizing: border-box;
     min-width: 200px; 
 }
-
+*/
 .FilterContent {
     display: flex;
     flex-direction: column;
@@ -47,7 +48,6 @@
 .FilterBar label {
     font-weight: bold;
     color: #333333;
-    gap: 20px;
     
 }
 
@@ -56,7 +56,6 @@
     border: 1px solid #cccccc;
     border-radius: 6px;
     transition: border-color 0.3s;
-    gap: 20px;
 }
 
 .FilterBar select:focus {
