--- a/Frontend/Styles/mainPage.css
+++ b/Frontend/Styles/mainPage.css
@@ -18,6 +18,7 @@
 .content .search-area .background {
     width: 100%;
     height: 40vh;
+    min-height: 300px;
     object-fit: cover;
     border-radius: 20px;
     filter: brightness(70%);
@@ -29,10 +30,10 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    margin: 20px;
-    height: 20vh;
-    width: 30vw;
-    right: 0;
+    left: 50%;
+    top: 10%;
+    margin: 0 auto;
+    right: 50px;
     background-color: rgba(255, 255, 255, 0.6);
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -40,14 +41,28 @@
 }
 
 .content .search-area .search-box .search-bar {
+    width: 100%;
+}
+
+.content .search-area .search-box .search-bar .form {
     display: flex;
+    flex-direction: column;
     gap: 10px;
+    width: 100%;
+}
+
+.content .search-area .search-box .search-bar .search-inputs{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    gap: 10px;
+    width: 100%;
 }
 
 
-
 .content .search-area .search-box .search-bar .search-inputs .search-select {
-    width: 100%;
+    flex: 1;
+    min-width: 0;
     padding: 10px;
     border-radius: 10px;
     background-color: #FFFFFF;
