--- a/Frontend/Styles/styles.css
+++ b/Frontend/Styles/styles.css
@@ -41,6 +41,21 @@ html, body {
     padding: 10px 20px;
 }
 
+.header .logout-button {
+    background-color: #d78f69;
+    border-radius: 16px;
+    border: none;
+    cursor: pointer;
+    width: 130px;
+    height: 40px;
+    gap: 5px;
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+}
+
 .header img {
     height: 90px;
 }
