--- a/Frontend/Styles/houseCard.css
+++ b/Frontend/Styles/houseCard.css
@@ -87,9 +87,18 @@
     justify-content: center;
 }
 
-.saleRentButton{
+.typeStatusButton{
     color: white;
     border: none;
     border-radius: 10px;
     padding: 10px 20px;
+}
+
+.home-status-label {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
