--- a/Frontend/Styles/myListingsPage.css
+++ b/Frontend/Styles/myListingsPage.css
@@ -7,7 +7,9 @@
 }
 
 .content .my-listings {
-    flex: 1;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
 .content .my-listings-text {
@@ -17,8 +19,10 @@
 }
 
 .content .house-cards {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     gap: 20px;
     padding: 6px;
     width: 100%;
