Search Result ve Admin Hatası düzeltildi

--- a/Frontend/Styles/adminPanelPage.css
+++ b/Frontend/Styles/adminPanelPage.css
@@ -1,5 +1,6 @@
 /* Main container */
 .Content {
+    height: 100%;
     padding: 20px;
     max-width: 1200px;
     margin: 0 auto;
@@ -8,10 +9,10 @@
 /* House Content Layout */
 .HouseContent {
     display: flex;
+    height: 100%;
     flex-wrap: wrap; /* Allows wrapping to the next row */
     gap: 20px; /* Space between items */
     padding: 10px;
-    overflow-y: auto;
     justify-content: center; /* Center items in the row */
 }
 
