--- a/Frontend/Styles/userInfoPage.css
+++ b/Frontend/Styles/userInfoPage.css
@@ -18,10 +18,11 @@ p{
     display: flex;
     flex-direction: column;
     background-color: #D9D9D9;
-    padding: 26px;
+    padding: 40px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 80%;
+    width: 70%;
+    gap: 20px;
 }
 
 .content .user-info .user-info-header{
@@ -40,7 +41,7 @@ p{
 .content .user-info .user-info-body{
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 100px;
 }
 
 .content .user-info .user-info-body .user-update-inputs{
@@ -50,16 +51,40 @@ p{
     width: 70%;
 }
 
+.content .user-info .user-info-body .user-update-inputs .input-rows > div {
+    width: 50%; /* Each div takes equal space */
+    display: flex;
+    flex-direction: column;
+    gap: 5px; /* Space between label and input */
+}
+
+.content .user-info .user-info-body .user-update-inputs .input-rows{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    width: 100%;
+}
+
 .content .user-info .user-info-body .user-update-inputs .input-field{
+    display: flex;
     border-radius: 10px;
     padding: 8px;
     font-size: 14px;
+}
+
+.content .user-info .user-info-body .user-update-inputs .input-row-neighborhood{
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    font-size: 14px;
+    width: 100%;
 }
 
 .content .user-info .user-info-body .update-password-inputs .input-field{
     border-radius: 10px;
     padding: 8px;
     font-size: 14px;
+    width: 100%;
 }
 
 .content .user-info .update-password-inputs{
@@ -81,8 +106,9 @@ p{
     align-items: center;
     font-size: 16px;
     background-color: #b0be9e;
+    min-width: 200px;
+    max-width: 200px;
 }
-
 
 .content .user-info .update-password-inputs .update-password-button{
     border-radius: 16px;
@@ -96,6 +122,7 @@ p{
     align-items: center;
     font-size: 16px;
     background-color: #b0be9e;
+    max-width: 400px;
 }
 
 .content .user-info .delete-account-form .delete-account-button{
